--- a/_posts/2024-08-22-Welcome.md
+++ b/_posts/2024-08-22-Welcome.md
@@ -1,1 +1,34 @@
-Hello world
+# GitHub Pages
+
+GitHub Pages는 깃허브(GitHub)에서 제공하는 무료 웹 호스팅 서비스입니다. 이 서비스를 사용하면 깃허브 저장소에 있는 코드를 기반으로 정적 웹사이트를 손쉽게 배포할 수 있습니다. 주로 프로젝트의 문서화, 개인 블로그, 포트폴리오 사이트 등에 사용됩니다.
+
+## 주요 특징
+
+- **정적 사이트 호스팅**: GitHub Pages는 HTML, CSS, JavaScript로 구성된 정적 웹사이트를 호스팅합니다.
+- **무료 제공**: GitHub 사용자라면 누구나 무료로 사용할 수 있습니다.
+- **자동 배포**: 저장소의 특정 브랜치(예: `main` 또는 `gh-pages`)에 커밋이 푸시되면, GitHub Pages가 자동으로 웹사이트를 배포합니다.
+- **사용자 도메인 지원**: 기본적으로 `username.github.io` 형태의 도메인을 제공하며, 사용자 정의 도메인도 설정할 수 있습니다.
+- **Jekyll 통합**: GitHub Pages는 정적 사이트 생성기인 Jekyll을 기본적으로 지원하여 블로그나 문서 사이트를 쉽게 생성할 수 있습니다.
+
+## 시작하기
+
+1. **저장소 생성**: GitHub에서 새로운 저장소를 생성합니다. 저장소 이름은 `username.github.io` 형식이어야 합니다.
+2. **사이트 파일 추가**: HTML, CSS, JavaScript 파일을 저장소에 추가합니다. Jekyll을 사용하는 경우 `_config.yml` 파일과 함께 마크다운(.md) 파일을 추가할 수도 있습니다.
+3. **브랜치 선택**: 설정에서 배포할 브랜치를 선택합니다. 일반적으로 `main` 또는 `gh-pages` 브랜치를 사용합니다.
+4. **사이트 배포**: 브랜치에 파일을 푸시하면, GitHub Pages가 사이트를 자동으로 배포합니다. `https://username.github.io/`에서 사이트를 확인할 수 있습니다.
+
+## 예시
+
+다음은 GitHub Pages를 사용하여 배포된 간단한 웹사이트 예시입니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My GitHub Page</title>
+</head>
+<body>
+  <h1>Welcome to My GitHub Page!</h1>
+  <p>This is a simple website hosted with GitHub Pages.</p>
+</body>
+</html>
