--- a/_posts/2024-08-22-Welcome.md
+++ b/_posts/2024-08-22-Welcome.md
@@ -33,3 +33,7 @@ GitHub Pages는 깃허브(GitHub)에서 제공하는 무료 웹 호스팅 서비
 </body>
 </html>
 ```
+
+
+[<a href="/ftp/test.pdf">Download File</a>]: <>
+<a href="/ftp/test.pdf">Download File</a>
